# ImagePackage_NEW

./: README.md  pyproject.toml
test/: test_image_clas.py  test_tesseract.py
